test/compile-fail/scope/use-no-name-group/top.rhdl
mod a {
    pub struct b {}
}

use a::{b, c};
